# graphfuse

./: DESIGN.md  README.md  main.py  pyproject.toml
graphfuse/: __init__.py  bench.py  codegen.py  demo.py  fuse.py  gpu_check.py  graph.py  interpreter.py  passes.py  test.py
scripts/: plot_bench.py
tests/: test_codegen.py  test_fusion.py  test_gpu.py  test_passes.py
