[project]
name = "graphfuse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    # triton only ships linux wheels (needs the gpu), so we only install it there.
    # the mac clone is just for editing + running the interpreter/passes locally.
    "triton>=3.7.1 ; sys_platform == 'linux'",
]
