[project]
name = "graphfuse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=5.0.0",
    # 2.11.0 is the newest torch with a cu128 wheel, which is what the server's
    # 12.8 driver can actually run (see the cu128 index note below).
    "torch>=2.11.0",
    "transformers>=5.12.1",
    # triton only ships linux wheels (needs the gpu), so we only install it there.
    # no version pin - let torch pull whatever triton it's built against.
    "triton ; sys_platform == 'linux'",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
# put the repo root on sys.path so `import graphfuse` works, and only collect tests/
pythonpath = ["."]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
